fix: auto wrap line for code tag

--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -110,3 +110,13 @@ a {
 #disqus_thread {
   margin-top: 3.25rem;
 }
+
+code {
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
+
